--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <ul>
         <li>Node.js with Typescript</li>
         <li>Python</li>
-        <li>SQLite / PostgreSQL</li>
+        <li>PostgreSQL / MongoDB</li>
         <li>Redis</li>
         <li>Docker</li>
       </ul>
