--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     a, a:visited {
       color: chartreuse;
     }
+    p {
+      text-align: center;
+    }
     /* Display as grid on larger screen sizes  */
     @media screen and (min-width: 992px) {
       main {
@@ -41,17 +44,9 @@
   <main>
     <div></div>
     <div>
-      <p>Hi, my name is <strong>Sami Al-Dury</strong> and I'm a junior backend developer.</p>
-      <p>My favorite technologies are:</p>
-      <ul>
-        <li>Node.js with Typescript</li>
-        <li>Python</li>
-        <li>PostgreSQL / MongoDB</li>
-        <li>Redis</li>
-        <li>Docker</li>
-      </ul>
-      <p>I'm also an investor and a big fan of Apple, Tesla, SpaceX and NIO.</p>
-      <p>You can check out my <a href="https://github.com/samialdury" target="_blank">Github</a> and <a href="https://twitter.com/samialdury" target="_blank">Twitter</a>.</p>
+      <p><strong>Sami Al-Dury</strong></p>
+      <br>
+      <p><a href="https://github.com/samialdury" target="_blank">Github</a> <a href="https://twitter.com/samialdury" target="_blank">Twitter</a></p>
     </div>
     <div></div>
   </main>
