--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     a, a:visited {
       color: chartreuse;
     }
-    p {
+    h1, h2, h3 {
       text-align: center;
     }
     /* Display as grid on larger screen sizes  */
@@ -35,7 +35,7 @@
         width: 100vw;
         height: 100vh;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 2fr 1fr;
       }
     }
   </style>
@@ -44,9 +44,15 @@
   <main>
     <div></div>
     <div>
-      <p><strong>Sami Al-Dury</strong></p>
+      <h1><strong>Sami Al-Dury</strong></h1>
       <br>
-      <p><a href="https://github.com/samialdury" target="_blank">Github</a> <a href="https://twitter.com/samialdury" target="_blank">Twitter</a></p>
+      <h2><a href="https://github.com/samialdury" target="_blank">Github</a> <a href="https://twitter.com/samialdury" target="_blank">Twitter</a></h2>
+      <br>
+      <h3><strong>BTC: </strong>39uX9iaXPPZuDFMC4LoPWaajJGN1WfrCSq</h3>
+      <h3><strong>BCH: </strong>1BQpuAgmLoXa4yb2HaX3g4GGMG2e5zQNNX</h3>
+      <h3><strong>LTC: </strong>M8LktBQVnyB85YjvHVt2JR8c9ytBdhJjSA</h3>
+      <h3><strong>ETH: </strong>0xFf5B40D1047063E36feb0DDbEC23dBdF7E9C47ed</h3>
+      <br>
     </div>
     <div></div>
   </main>
